force-app/main/default/objects/Feedback_Invitation__c/Feedback_Invitation__c.object-meta.xml
<CustomObject>
    <description
  >One invited person per row: their own survey link, when they were asked, reminded and answered. It exists because a trip can carry several guests who each answer for themselves, and because the public survey must be able to resolve a link without ever reading a Contact record - a Traveler is a detail of its Contact, so the site could not read it without opening customer contacts to the guest user.</description>
    <label>Feedback Invitation</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invitation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Invitations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>