force-app/main/default/objects/Feedback_Invitation__c/fields/Answered_On__c.field-meta.xml
<CustomField>
    <fullName>Answered_On__c</fullName>
    <description
  >When this person submitted their feedback, stamped by GxFeedbackService as it saves their response. It closes their link and keeps their reminder from going out; the booking's Feedback_Received_On__c still records the first answer for the trip.</description>
    <inlineHelpText
  >When this guest answered. Set automatically.</inlineHelpText>
    <label>Answered On</label>
    <type>DateTime</type>
</CustomField>