force-app/main/default/objects/Feedback_Invitation__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description
  >The trip this person was invited about. A lookup, not a master-detail, so the public survey can read an invitation without reading anything else; the guest sharing rule keys on Sent On.</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Feedback Invitations</relationshipLabel>
    <relationshipName>Feedback_Invitations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>