force-app/main/default/objects/Feedback_Invitation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The person who was asked. The survey stores it on their response, so an answer is attributed to the guest who gave it. The site reads this id only; it never reads the Contact record itself.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedback Invitations</relationshipLabel>
    <relationshipName>Feedback_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>