force-app/main/default/objects/Feedback_Invitation__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <description
  >How the survey greets this guest, copied from their contact as the invitation is prepared. It is stored here because the public survey must never read a Contact record: without it the page would have to fall back to the booking's main contact, and the second traveller on a trip would be greeted by the first one's name.</description>
    <inlineHelpText
  >The name the survey greets this guest with. Set automatically.</inlineHelpText>
    <label>Guest Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>