force-app/main/default/objects/Feedback_Invitation__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set once this person has been reminded, so one reminder stays one reminder. Set before the reminder email leaves, so a failed send is not retried: with a guest's inbox at stake, under-reminding is the safer failure.</description>
    <inlineHelpText
  >Whether this guest has already had a reminder. Set automatically.</inlineHelpText>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>