force-app/main/default/objects/Feedback_Invitation__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >This person's own survey link secret, minted by GxFeedbackDispatch. It is the only thing that opens their survey: the booking number in the link is for the reader, because a group booking and every participant booking under it share one number. Unique and case sensitive so two guests can never share a link, and an external id so the lookup is indexed.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >The guest's personal link secret. Set automatically; never edit or share it.</inlineHelpText>
    <label>Secret</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>