force-app/main/default/objects/Feedback_Invitation__c/fields/Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_On__c</fullName>
    <description
  >When this person was last asked: set as their invitation is prepared and moved forward again by their reminder. The reminder pass waits Reminder_Delay_Days__c after it, and the survey's expiry counts from it, so a reminded guest gets a full validity window from the day they were last asked.</description>
    <inlineHelpText
  >When we last asked this guest. Set automatically.</inlineHelpText>
    <label>Sent On</label>
    <type>DateTime</type>
</CustomField>