force-app/main/default/objects/Feedback_Invitation__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <description
  >This guest's own feedback link, assembled from their booking's number and their Secret__c. The base address comes from the Gx_Feedback_Setting__mdt Default record, so staging and production each resolve to their own site. It is what the team copies when a guest asks for their link again.</description>
    <formula>IF(
  OR(ISBLANK(Secret__c), ISBLANK(Booking__r.BookingNumber__c)),
  &quot;&quot;,
  $CustomMetadata.Gx_Feedback_Setting__mdt.Default.Survey_Base_URL__c
    &amp; &quot;?b=&quot; &amp; Booking__r.BookingNumber__c
    &amp; &quot;&amp;k=&quot; &amp; Secret__c
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >This guest's personal link. Generated automatically.</inlineHelpText>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>