force-app/main/default/objects/Feedback_Invitation__c/fields/Survey_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Survey_Snapshot__c</fullName>
    <description
  >What this guest is asked to rate, when that is not the whole trip. A traveller who stayed a night longer, or skipped a round the others played, is authorised for a different set of services, and only those are saved here. Blank means the trip's own list applies, which is the ordinary case where everybody shared the same itinerary. It is stored on the invitation because the public survey may never read the traveller records the authorisation hangs from.</description>
    <inlineHelpText
  >Only this guest's part of the trip, when it differs from the rest. Set automatically.</inlineHelpText>
    <label>Survey Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>