force-app/main/default/objects/Feedback_Invitation__c/fields/Traveler__c.field-meta.xml
<CustomField>
    <fullName>Traveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The traveller row this invitation came from, when it came from one. Empty when the booking's main contact was asked without travelling themselves.</description>
    <label>Traveler</label>
    <referenceTo>Traveler__c</referenceTo>
    <relationshipLabel>Feedback Invitations</relationshipLabel>
    <relationshipName>Feedback_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>